--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -20,7 +20,7 @@
     {% for entity in entities %}
     <tr>
       <td>{{ entity.id }}</td>
-      <td>{{ entity.identifier }}</td>
+      <td>{{ entity.username }}</td>
       <td>{{ entity.role.name }}</td>
       <td>{{ entity.createdAt|date('Y/m/ H:i:s') }}</td>
       <td>
